--- a/bin/install
+++ b/bin/install
@@ -2,8 +2,7 @@
 
 var Validate = require('git-validate');
 
-Validate.copy('../jshintrc', '.jshintrc');
-Validate.copy('../jshintignore', '.jshintignore');
-Validate.installScript('lint', 'jshint .');
-Validate.installScript('validate', 'npm ls');
-Validate.configureHook('pre-commit', ['lint', 'validate', 'test']);
+Validate.copy('../eslintrc', '.eslintrc');
+Validate.copy('../eslintignore', '.eslintignore');
+Validate.installScript('lint', 'eslint .');
+Validate.configureHook('pre-commit', ['lint', 'test']);
