--- a/bin/install
+++ b/bin/install
@@ -10,6 +10,6 @@ Validate.configureHook('pre-commit', ['lint', 'test']);
 
 // add dependencies
 Validate.installPkg('eslint', '*', {dev: true});
-Validate.installPkg('eslint-config-tyrchen', '*', {dev: true});
+Validate.installPkg('eslint-config-airbnb', '*', {dev: true});
 Validate.installPkg('eslint-plugin-react', '*', {dev:true});
 Validate.installPkg('babel-eslint', '*', {dev:true});
